# Garnet

./: .gitignore  CMakeLists.txt
garnet/src/: bridgecall.cpp  bridgecall.h  bridgeclass.cpp  bridgeclass.h  conversion.cpp  conversion.h  engine.cpp  engine.h  garnetlib_global.h  utils.cpp  utils.h  variadicargument.h
test/: test.h  testgarnetbridgeclass.cpp  testgarnetbridgeclass.h  testgarnetengine.cpp  testgarnetengine.h  testgarnetvalue.cpp  testgarnetvalue.h
